--- a/patcher/pom.xml
+++ b/patcher/pom.xml
@@ -115,7 +115,8 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-                <finalName>${project.artifactId}-bundled-${project.version}</finalName>
+                <finalName>${project.artifactId}-bundled</finalName>
+                <outputDirectory>${basedir}</outputDirectory>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
