--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,9 @@ steps:
   entrypoint: 'mvn'
   args: ['package','-f','./patcher/pom.xml']
 - name: gcr.io/cloud-builders/docker
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/patcher:${_VERSION}', './patcher/']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/patcher:${_VERSION}', '.']
 - name: gcr.io/cloud-builders/docker
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/patcher:latest', './patcher/']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/patcher:latest', '.']
 images: ['gcr.io/$PROJECT_ID/patcher']
 substitutions:
     _VERSION: 0.8.0
