--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@
 steps:
 - name: maven:3.6.2-jdk-8-slim
   entrypoint: 'mvn'
-  args: ['package','-f','./patcher/pom.xml']
+  args: ['package','-f','./pom.xml']
 - name: gcr.io/cloud-builders/docker
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/patcher:${_VERSION}', '.']
 - name: gcr.io/cloud-builders/docker
